Changed stylings on the card

--- a/app/src/app/components/programme-card/programme-card.component.html
+++ b/app/src/app/components/programme-card/programme-card.component.html
@@ -3,6 +3,6 @@
 
     <mat-card-content class="programme_card__item">
         <p><b>{{ programme.name }}</b></p>
-        <p>{{ programme.rating }}/5</p>
+        <p>{{ getEmoji() }} {{ programme.rating }}/5 {{ getEmoji() }}</p>
     </mat-card-content>
 </mat-card>
