--- a/app/src/app/components/programmes/programmes.component.scss
+++ b/app/src/app/components/programmes/programmes.component.scss
@@ -56,6 +56,7 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border: solid $studios-tertiary-pale-grey;
   border-radius: 5px;
+  width: 60%;
   grid-column: auto;
 }
 
